--- a/.github/workflows/build-backend-image.yml
+++ b/.github/workflows/build-backend-image.yml
@@ -7,7 +7,7 @@ name: Backend app docker image build and manifest update
 on:
   push:
     paths:
-      - 'backend_nus/**'
+      - 'backend/**'
 
 jobs:
   build:
