--- a/backend_nus/src/main/resources/application.properties
+++ b/backend_nus/src/main/resources/application.properties
@@ -1,11 +1,30 @@
 spring.profiles.active=@spring.profiles.active@
 server.port=9090
 
+#jasypt.encryptor.password=nus_gc2024!
+#jasypt.encryptor.algorithm= PBEWITHHMACSHA512ANDAES_256
+#jasypt.encryptor.key-obtention-iterations=1000
+#jasypt.encryptor.pool-size=1
+#jasypt.encryptor.provider-name=SunJCE
+#jasypt.encryptor.salt-generator-classname=org.jasypt.salt.RandomSaltGenerator
+#jasypt.encryptor.iv-generator-classname= org.jasypt.iv.RandomIvGenerator
+#jasypt.encryptor.string-output-type=base64
+#jasypt.encryptor.property.prefix=ENC(
+#jasypt.encryptor.property.suffix=)
+
+spring.datasource.url=jdbc:mysql://4.153.47.22:3306/gc_nus
+spring.datasource.username=root
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto = none
+
+
 #uncomment for localhost testing only, input your own username and password for mysql
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/nucleusproject1
+#spring.datasource.url=jdbc:mysql://localhost:3306/<the name you put>
 #spring.datasource.username=root
-#spring.datasource.password=MySQLadmin#30062021@
+#spring.datasource.password=<your password>
 
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto = none
