--- a/backend_nus/src/main/resources/application.properties
+++ b/backend_nus/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.port=9090
 #jasypt.encryptor.property.suffix=)
 
 spring.datasource.url=jdbc:mysql://4.153.47.22:3306/gc_nus
-spring.datasource.username=root
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
