--- a/backend_nus/src/main/resources/application-dev.properties
+++ b/backend_nus/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=9090
 spring.application.name=myapp
 
 # Shannon - 15 August 2024
-
+# test test
 #please ignore for now.
 # create your schema with name: nucleusproject1 inside the root account for localhost
 # Vault connection settings
