--- a/backend_nus/src/main/resources/application.properties
+++ b/backend_nus/src/main/resources/application.properties
@@ -12,7 +12,8 @@ server.port=9090
 #jasypt.encryptor.property.prefix=ENC(
 #jasypt.encryptor.property.suffix=)
 
-spring.datasource.url=jdbc:mysql://mycluster.mysql-database.svc.cluster.local:3306/gc_nus
+#spring.datasource.url=jdbc:mysql://mycluster.mysql-database.svc.cluster.local:3306/gc_nus
+spring.datasource.url=jdbc:mysql://localhost:3307/nucleusproject1
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
