--- a/backend_nus/pom.xml
+++ b/backend_nus/pom.xml
@@ -112,6 +112,13 @@
             <version>3.0.5</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.hierynomus/sshj -->
         <!--<dependency>
             <groupId>com.hierynomus</groupId>
