--- a/backend_nus/src/main/resources/application.properties
+++ b/backend_nus/src/main/resources/application.properties
@@ -13,11 +13,11 @@ spring.profiles.active=@spring.profiles.active@
 #jasypt.encryptor.property.suffix=)
 
 #spring.datasource.url=jdbc:mysql://mycluster.mysql-database.svc.cluster.local:3306/gc_nus
-spring.datasource.url=jdbc:mysql://localhost:3307/nucleusproject1
+spring.datasource.url=jdbc:mariadb://139.162.26.70:3306/nucleusproject1
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto = none
 
 
