--- a/backend_nus/src/main/resources/application.properties
+++ b/backend_nus/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=@spring.profiles.active@
-#server.port=9090
+server.port=9090
 
 #jasypt.encryptor.password=nus_gc2024!
 #jasypt.encryptor.algorithm= PBEWITHHMACSHA512ANDAES_256
