--- a/backend_nus/src/main/resources/application.properties
+++ b/backend_nus/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=@spring.profiles.active@
 server.port=8080
 
-spring.datasource.url=jdbc:mariadb://139.162.26.70:3306/nucleusproject1
+spring.datasource.url=jdbc:mariadb://mariadb-deployment.mariadb.svc.cluster.local:3306/nucleusproject1
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
