--- a/backend_nus/src/main/resources/application.properties
+++ b/backend_nus/src/main/resources/application.properties
@@ -1,18 +1,12 @@
 spring.profiles.active=@spring.profiles.active@
 server.port=8080
 
-#spring.datasource.url=jdbc:mariadb://mariadb.mariadb.svc.cluster.local:3306/nucleusproject1
-#spring.datasource.username=${DB_USER}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
-#spring.jpa.hibernate.ddl-auto = none
-
-spring.datasource.url=jdbc:mysql://localhost:3306/nucleusproject1
-spring.datasource.username=root
-spring.datasource.password=MySQLadmin#30062021@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://mariadb.mariadb.svc.cluster.local:3306/nucleusproject1
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto = none
+
 
 
