--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -43,9 +43,10 @@ jobs:
 
         # For Snyk Open Source you must first set up the development environment for your application's dependencies
         # For example for Node
-        uses: actions/setup-node@v4
-        with:
-            node-version: 20
+        #- name: node
+        #uses: actions/setup-node@v4
+        #with:
+        #    node-version: 20
 
         env:
           # This is where you will need to introduce the Snyk API token created with your Snyk account
@@ -54,7 +55,9 @@ jobs:
         # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
         # Use || true to not fail the pipeline
       - name: Snyk Code test
-        run: snyk code test --sarif > snyk-code.sarif # || true
+        run: |
+         cd backend_nus
+         snyk code test --sarif > snyk-code.sarif # || true
 
         # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
       - name: Snyk Open Source monitor
