--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -1,46 +1,28 @@
-name: Snyk Scan
+#Source obtained from:
+#https://github.com/snyk/actions/tree/master/maven-3-jdk-17
+#workflow for code scanning only
+
+name: Code scanning for maven via Synk
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
-  snyk-scan:
+  security:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Get Node v20
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - name: Install dependencies
-        run: npm install
-      - name: Run Snyk test
-        uses: snyk/actions/node@master
-        continue-on-error: true
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/maven-3-jdk-17@master
+        continue-on-error: true # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          command: test --sarif
-          args: --sarif-file-output=snyk_test.sarif
-      - name: Run Snyk code test
-        uses: snyk/actions/node@master
-        continue-on-error: true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          command: code test --sarif
-          args: --sarif-file-output=snyk_code_test.sarif
-      - name: Run Snyk monitor
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          command: monitor
+          args: --sarif-file-output=snyk.sarif
       - name: Create SARIF directory and move SARIF files
         run: |
           mkdir sarif_files &&
-          mv snyk_test.sarif snyk_code_test.sarif sarif_files/
+          mv synk.sarif sarif_files/
       - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: sarif_files
