--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -14,10 +14,11 @@ jobs:
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/maven-3-jdk-17@master
         continue-on-error: true # To make sure that SARIF upload gets called
+        working-directory: ./gc-sus-backend/backend_nus
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --sarif-file-output=snyk.sarif --workdir=./gc-sus-backend/backend_nus
+          args: --sarif-file-output=snyk.sarif
       - name: Create SARIF directory and move SARIF files
         run: |
           mkdir sarif_files &&
