--- a/.github/workflows/build-backend-image.yml
+++ b/.github/workflows/build-backend-image.yml
@@ -44,11 +44,18 @@ jobs:
       uses: aquasecurity/trivy-action@0.20.0
       with:
         image-ref: 'ghcr.io/shannon36/gc-sus-backend:${{ github.sha }}'
-        format: 'table'
+        format: 'sarif'
         exit-code: '0'
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
+        output: 'trivy-results.sarif'
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      with:
+        sarif_file: 'trivy-results.sarif'
 
   update-backend-manifest:
     runs-on: ubuntu-latest
