--- a/.github/workflows/semgrep-scan.yml
+++ b/.github/workflows/semgrep-scan.yml
@@ -28,7 +28,7 @@ jobs:
             semgrep \
               --sarif --output report.sarif \
               --metrics=off \
-              --config="p/default"
+              --config=auto
 
         # step 3
         
