added bearer and updated BE to consider PR only

--- a/.github/workflows/build-backend-image.yml
+++ b/.github/workflows/build-backend-image.yml
@@ -6,8 +6,10 @@ name: Backend app docker image build and manifest update
 
 on:
   push:
-    paths:
-      - 'backend_nus/**'
+    pull_request:
+    types: [opened, synchronize, reopened]
+    #paths:
+    #  - 'backend_nus/**'
 
 jobs:
   build:
