--- a/.github/workflows/bearer-security.yml
+++ b/.github/workflows/bearer-security.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Bearer
         id: report
-        uses: bearer/bearer-action@2
+        uses: bearer/bearer-action@v2
         with:
           diff: true
           format: sarif
