--- a/.github/workflows/bearer-security.yml
+++ b/.github/workflows/bearer-security.yml
@@ -4,8 +4,9 @@
 
 name: Code scanning for maven via bearer
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  push:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -19,7 +20,6 @@ jobs:
         id: report
         uses: bearer/bearer-action@v2
         with:
-          diff: true
           format: sarif
           output: results.sarif
       - name: Upload SARIF file
