--- a/.github/workflows/bearer-security.yml
+++ b/.github/workflows/bearer-security.yml
@@ -2,33 +2,34 @@
 #https://github.com/snyk/actions/tree/master/maven-3-jdk-17
 #workflow for code scanning only
 
-name: Code scanning for maven via bearer
+name: Aikido Security
 on:
-  push:
+  pull_request:
     branches:
-      - main
-
-permissions: 
-  contents: write
-  pull-requests: write
+      - '*'
 
 jobs:
-  #permissions: write-all
-  rule_check:
+  aikido-security:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Bearer
-        id: report
-        uses: bearer/bearer-action@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Detect new vulnerabilities
+        uses: AikidoSec/github-actions-workflow@v1.0.13
         with:
-          format: sarif
-          output: results.sarif
-      - name: Upload SARIF file
-        if: always()
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: results.sarif
+            secret-key: ${{ secrets.AIKIDO_SECRET_KEY }}
+            fail-on-timeout: true
+            fail-on-dependency-scan: true
+            fail-on-sast-scan: false
+            fail-on-iac-scan: false
+            minimum-severity: 'CRITICAL'
+            timeout-seconds: 180
+            post-scan-status-comment: 'off'
+            post-sast-review-comments: 'off'
+            file: pom.xml 
+            github-token: ${{ secrets.GITHUB_TOKEN }}
+
       #- name: Run Snyk to check for vulnerabilities
       #  uses: snyk/actions/maven-3-jdk-17@master
       #  continue-on-error: true # To make sure that SARIF upload gets called
