--- a/.github/workflows/bearer-security.yml
+++ b/.github/workflows/bearer-security.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - '*'
-
+permissions: write-all
 jobs:
   aikido-security:
     runs-on: ubuntu-latest
@@ -28,7 +28,15 @@ jobs:
             post-scan-status-comment: 'off'
             post-sast-review-comments: 'off'
             file: pom.xml 
+            format: sarif               # Specify output format as SARIF
+            output: aikido-results.sarif # Name of the SARIF results file
             github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload SARIF results
+        if: always()
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: aikido-results.sarif
 
       #- name: Run Snyk to check for vulnerabilities
       #  uses: snyk/actions/maven-3-jdk-17@master
