--- a/.github/workflows/aikido-security.yml
+++ b/.github/workflows/aikido-security.yml
@@ -1,26 +1,33 @@
 #Source obtained from:
-#https://help.aikido.dev/doc/github-action-setup-for-local-scanner/docn4KpccwdF
+#https://github.com/AikidoSec/github-actions-workflow
 #workflow for code scanning only
 
 name: Aikido Security
-​on:
-  push:
+on:
+  pull_request:
     branches:
-      - main
+      - '*'
 
-name: Aikido Scan
 jobs:
-  aikido-local-scan-repo:
+  aikido-security:
     runs-on: ubuntu-latest
-    container:
-      image: aikidosecurity/local-scanner:v1.0.52
-    steps: 
-      - uses: actions/checkout@v4 
-        with: 
-          token: ${{ secrets.GITHUB_TOKEN }} 
-          path: ./backend/pom.xml
-      - name: Run scan
-        run: aikido-local-scanner scan my-repo --apikey ${{ secrets.AIKIDO_API_KEY }} --repositoryname gc-sus-backend --branchname main
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Detect new vulnerabilities
+        uses: AikidoSec/github-actions-workflow@v1.0.13
+        with:
+            secret-key: ${{ secrets.AIKIDO_SECRET_KEY }}
+            fail-on-timeout: true
+            fail-on-dependency-scan: true
+            fail-on-sast-scan: false
+            fail-on-iac-scan: false
+            minimum-severity: 'CRITICAL'
+            timeout-seconds: 180
+            post-scan-status-comment: 'off'
+            post-sast-review-comments: 'off'
+            github-token: ${{ secrets.GITHUB_TOKEN }}
 
 
       #format: sarif               # Specify output format as SARIF
