feat(oauth): add oauth, auth controller, security config, redirect endpoints and oauth login endpoint

--- a/backend_nus/src/main/resources/application.properties
+++ b/backend_nus/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.profiles.active=@spring.profiles.active@
-server.port=80
+server.port=8080
 
 spring.datasource.url=jdbc:mariadb://mariadb.mariadb.svc.cluster.local:3306/nucleusproject1
 spring.datasource.username=${DB_USER}
@@ -8,3 +8,11 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto = none
 server.servlet.context-path=/backend
+
+spring.security.oauth2.client.registration.google.client-id=1090601764279-2njt06m8470ls2fo7h7aie8rltdjcgns.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+# NOTE: change the base url to localhost for testing and
+# smartcartgcsus.store in production
+# Maybe can try to find out how to use environment variables to configure dynamically in runtime
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.scope=email,profile
