--- a/backend_nus/pom.xml
+++ b/backend_nus/pom.xml
@@ -23,7 +23,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <spring.profiles.active>application-dev</spring.profiles.active>
+                <spring.profiles.active>application</spring.profiles.active>
             </properties>
         </profile>
         <profile>
@@ -125,6 +125,11 @@
             <artifactId>google-api-client</artifactId>
             <version>1.32.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson2</artifactId>
+            <version>1.40.1</version> <!-- Check for latest version -->
+        </dependency>
 
         <!-- JWT -->
         <dependency>
@@ -147,6 +152,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
