--- a/backend_nus/src/main/resources/application-dev.properties
+++ b/backend_nus/src/main/resources/application-dev.properties
@@ -1,17 +1,10 @@
-#server.port=9090
-spring.application.name=myapp
+spring.profiles.active=@spring.profiles.active@
+server.port=8080
 
-# Shannon - 15 August 2024
-
-# create your schema with name: nucleusproject1 inside the root account for localhost
-#uncomment for localhost testing only, input your own username and password for mysql/mariadb
-#using mariadb for prod
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/<the name you put>
-#spring.datasource.username=root
-#spring.datasource.password=<your password>
-
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto = none
-
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/nucleusproject1
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto = none
+server.servlet.context-path=/backend
