--- a/backend_nus/src/main/resources/application-prd.properties
+++ b/backend_nus/src/main/resources/application-prd.properties
@@ -1,13 +1,12 @@
-server.port=90
-spring.application.name=gcsusapp
+spring.profiles.active=@spring.profiles.active@
+server.port=80
+# server.port=8080
 
-# Shannon - 17 August 2024
-
-spring.datasource.url=jdbc:mariadb://139.162.26.70:3306/nucleusproject1
+spring.datasource.url=jdbc:mariadb://mariadb.mariadb.svc.cluster.local:3306/nucleusproject1
+# spring.datasource.url=jdbc:mariadb://localhost:3306/nucleusproject1
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto = none
-
-
+server.servlet.context-path=/backend
